feat: header layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,8 +26,6 @@
         "react"
     ],
     "rules": {
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "react/self-closing-comp": "off"
-      // "react/self-closing-comp": "error",
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
