--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "react/prop-types": 0,
     "no-underscore-dangle": 0,
     "class-methods-use-this": 0,
-    "react/jsx-no-bind": 0
+    "react/jsx-no-bind": 0,
+    "react/jsx-props-no-spreading": 0
   }
 }
