--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "no-underscore-dangle": 0,
     "class-methods-use-this": 0,
     "react/jsx-no-bind": 0,
-    "react/jsx-props-no-spreading": 0
+    "react/jsx-props-no-spreading": 0,
+    "react/destructuring-assignment": 0
   }
 }
